# hh_vacancy

./: .coverage  README.md  main.py  pyproject.toml
htmlcov/: class_index.html
src/: file_saver.py  hh_api.py  user_iteraction.py  utils.py  vacancy.py
tests/: conftest.py  test_file_saver.py  test_hh_api.py  test_vacancy.py
